--- a/client/src/login.sass
+++ b/client/src/login.sass
@@ -10,7 +10,7 @@
     margin-bottom: 0.5rem
 
 .bubble-logo
-  background: url("../../public/bubble.svg") center/cover no-repeat border-box
+  background: url("../bubble.svg") center/cover no-repeat border-box
   margin-top: 0.3rem
   width: 105px
   height: 10vh
